[gd_scene load_steps=4 format=3 uid="uid://c1h3mjqko73yw"]

[ext_resource type="Script" path="res://scenes/ui/combat_animation_scene.gd" id="1_combat_anim"]
[ext_resource type="Theme" uid="uid://cpdx7u62cktq6" path="res://assets/themes/ui_theme.tres" id="2_ui_theme"]
[ext_resource type="FontFile" uid="uid://cqlbwopye8b43" path="res://assets/fonts/monogram.ttf" id="3_monogram"]

[node name="CombatAnimationScene" type="CanvasLayer"]
layer = 100
theme = ExtResource("2_ui_theme")
script = ExtResource("1_combat_anim")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 200
alignment = 1

[node name="DefenderContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="NameLabel" type="Label" parent="CenterContainer/HBoxContainer/DefenderContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_monogram")
theme_override_font_sizes/font_size = 24
text = "Defender"
horizontal_alignment = 1

[node name="HPBar" type="ProgressBar" parent="CenterContainer/HBoxContainer/DefenderContainer"]
custom_minimum_size = Vector2(160, 20)
layout_mode = 2
value = 50.0
show_percentage = false

[node name="AttackerContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="NameLabel" type="Label" parent="CenterContainer/HBoxContainer/AttackerContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_monogram")
theme_override_font_sizes/font_size = 24
text = "Attacker"
horizontal_alignment = 1

[node name="HPBar" type="ProgressBar" parent="CenterContainer/HBoxContainer/AttackerContainer"]
custom_minimum_size = Vector2(160, 20)
layout_mode = 2
value = 50.0
show_percentage = false

[node name="DamageLabel" type="Label" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -40.0
offset_right = 75.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_monogram")
theme_override_font_sizes/font_size = 64
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CombatLog" type="Label" parent="."]
texture_filter = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_monogram")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1
